Added API proxy routing and localhost serving of bundle (will need to be updated for deployment)

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,5 @@
     <link rel="stylesheet" href="http://cowie22-env.myqnebupcf.us-east-1.elasticbeanstalk.com/styles.css">
     <script src="/scripts/react/umd/react.production.min.js"></script>
     <script src="/scripts/styled-components/dist/styled-components.min.js"></script>
-    <script src="http://rightbar-env.hbtddaitbq.us-east-2.elasticbeanstalk.com/bundle.js"></script>
-    <script src="http://ec2-54-193-26-23.us-west-1.compute.amazonaws.com/bundle.js"></script>
-    <script src="http://cowie22-env.myqnebupcf.us-east-1.elasticbeanstalk.com/bundle.js"></script>
-    <script src="http://ponydescription.us-west-1.elasticbeanstalk.com/bundle.js"></script>
+    <script src="http://localhost:3000/song/1/bundle.js"></script>
 </html>
