--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Proxy</title>
+    <title>dbCloud</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,8 +14,12 @@
         <div id="right_bar"></div>
     </div>
 </body>
-    <link rel="stylesheet" href="http://cowie22-env.myqnebupcf.us-east-1.elasticbeanstalk.com/styles.css">
-    <script src="/scripts/react/umd/react.production.min.js"></script>
-    <script src="/scripts/styled-components/dist/styled-components.min.js"></script>
-    <script src="http://localhost:3000/song/1/bundle.js"></script>
+    <link rel="stylesheet" href="./styles.css"> <!-- I dont know if this is OK, but it's what came with it -->
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="https://s3.amazonaws.com/sdc-dbcloud/bundle.js"></script>
+    <script src=""></script> TODO:
+    <script src=""></script> TODO:
+    <script src=""></script> TODO:
+
 </html>
