Commented out bundles that dont exist

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="./styles.css"> <!-- I dont know if this is OK, but it's what came with it -->
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-    <script src="https://s3.amazonaws.com/sdc-dbcloud/bundle.js"></script>
-    <script src=""></script> TODO:
-    <script src=""></script> TODO:
-    <script src=""></script> TODO:
+    <script src="https://s3.amazonaws.com/sdc-dbcloud/bundle.js"></script> <!-- Related -->
+    <script src="http://ec2-34-212-115-73.us-west-2.compute.amazonaws.com/dist/bundle.js"></script> <!-- Description -->
+    <!-- <script src=""></script> comments -->
+    <!-- <script src=""></script> song -->
 
 </html>
