--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,10 @@
     <link rel="stylesheet" href="./styles.css"> <!-- I dont know if this is OK, but it's what came with it -->
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/styled-components@4.1.3/dist/styled-components.min.js"></script>
     <script src="https://s3.amazonaws.com/sdc-dbcloud/bundle.js"></script> <!-- Related -->
-    <script src="http://ec2-34-212-115-73.us-west-2.compute.amazonaws.com/dist/bundle.js"></script> <!-- Description -->
-    <!-- <script src=""></script> comments -->
+    <script src="https://s3-us-west-2.amazonaws.com/dbcloud-trackdescriptions-bundle/bundle.js"></script> <!-- Description -->
+    <script src=""></script> <!-- comments -->
     <!-- <script src=""></script> song -->
 
 </html>
